Fixed flipped card issue and made card logs more readable by removing added color on value and swapping color to crimson

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,8 +12,8 @@
   --text-color: white;
   --bl-btn:#005fff;
   --bl-btn-hv: #0033CC;
-  --rd-btn:red;
-  --rd-btn-hv:darkred;
+  --rd-btn:tomato;
+  --rd-btn-hv:crimson;
   --gn-btn:#01b401;
   --gn-btn-hv:#009400;
 }
